--- a/CSS/nain.css
+++ b/CSS/nain.css
@@ -1,10 +1,34 @@
-
+/*голова*/
+.header{
+    background: #FFFFFF;
+    color: #212121;
+}
+/*навигация*/
 .Web_color{
     color: #2196F3;
 }
-.company_name{
- width: 145px;
-height: 31px;
-left: 215px;
-top: 24px;
+.ul{
+    list-style: none;
 }
+/*main*/
+/*секуия1*/
+/*секция 2*/
+/*секция 3*/
+/*адреса*/
+.Web_color{
+    color: #2196F3;
+}
+.Web_color2{
+    color: #000000;
+}
+/* цвет навигации не активной #212121
+ */
+/*  цвет контактов #757575*/
+/* цвет заголовка #FFFFFF*/
+/* цвет заголовок преимуществ*/
+/* цвет текста преимуществ*/
+/* цвет загововок секций #212121
+*/
+/* цвет адреса*/
+/*цвет контактов rgba(255, 255, 255, 0.6);*/
+/*цвет выделения активации активности*/
