--- a/CSS/nain.css
+++ b/CSS/nain.css
@@ -13,6 +13,24 @@
 .Web_color2{
     color: #000000;
 }
+ul{
+    list-style: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*навигация*/
 .Web_color{
     color: #2196F3;
