--- a/CSS/nain.css
+++ b/CSS/nain.css
@@ -4,6 +4,7 @@
 --accent-color: #2196F3;
 --button-text-color: #FFFFFF;
 --button-background: #2196F3;
+--background-cilir : #FFFFFF;
 
 }
 .body{
@@ -85,3 +86,4 @@ ul{
 /* цвет адреса*/
 /*цвет контактов rgba(255, 255, 255, 0.6);*/
 /*цвет выделения активации активности*/
+/*партфолио*/
