--- a/CSS/nain.css
+++ b/CSS/nain.css
@@ -93,3 +93,9 @@ ul{
 /*цвет контактов rgba(255, 255, 255, 0.6);*/
 /*цвет выделения активации активности*/
 /*партфолио*/
+/*ПАРТФОЛИО*/
+.port-nav :focus,
+.port-nav :hover{
+color: white;
+background: #2196F3;
+}
