--- a/CSS/nain.css
+++ b/CSS/nain.css
@@ -16,6 +16,10 @@
     background: #FFFFFF;
     color: var(--title-text-color)
 }
+.adress{
+    color: #FFFFFF
+}
+
 .Web_color{
     color: #2196F3;
 }
@@ -98,4 +102,7 @@ ul{
 .port-nav :hover{
 color: white;
 background: #2196F3;
+}
+.imagi-partfolio p{
+    color: #757575;
 }
