--- a/CSS/nain.css
+++ b/CSS/nain.css
@@ -8,10 +8,9 @@
 
 }
 .body{
-    background: #ffff;
-    color: var(--title-text-color)
-    font-family: Roboto, sans-serif;
-}
+    background:#FFFFFF
+  
+
 /*голова*/
 .header{
     background: #FFFFFF;
@@ -21,6 +20,9 @@
 .logo{
     font-family: Raleway;
 font-style: normal;
+font-size: 26px;
+line-height: 1,19px;
+
 }
 .adress{
     color: #FFFFFF
@@ -41,17 +43,27 @@ ul{
 /*Navigations*/
 .navig_sait a{
     color: var(--title-text-color)
+font-weight: 500;
+font-size: 14px;
+line-height: 1,14px;
+letter-spacing: 0.02em;
 }
 .navig_sait :focus,
 .navig_sait :hover{
     color: var(--accent-color);   
 }
-.contakts a{
+.contakts{
     color:  #757575;
 }
 .contakts :focus,
 .contakts :hover{
     color: #2196F3;
+}
+.contakts{
+       font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
 }
 /*main*/
 
