--- a/CSS/nain.css
+++ b/CSS/nain.css
@@ -8,13 +8,13 @@
 
 }
 .body{
-    background:#FFFFFF
-  
+    background:#FFFFFF;
+    font-family: Roboto, sans-serif;
 }
 /*голова*/
 .header{
     background: #FFFFFF;
-    color: var(--title-text-color)
+    color: var(--title-text-color);
 }
 /**LOGO**/
 .logo{
@@ -22,10 +22,9 @@
 font-style: normal;
 font-size: 26px;
 line-height: 1,19px;
-
 }
 .adress{
-    color: #FFFFFF
+    color: #FFFFFF;
 }
 
 .Web_color{
@@ -52,14 +51,13 @@ letter-spacing: 0.02em;
 .navig_sait :hover{
     color: var(--accent-color);   
 }
-.contakts{
-    color:  #757575;
-}
+
 .contakts :focus,
 .contakts :hover{
     color: #2196F3;
 }
 .contakts{
+    color:  #ffffff ;
        font-weight: 500;
     font-size: 14px;
     line-height: 16px;
@@ -87,7 +85,7 @@ letter-spacing: 0.02em;
 }
 .Benefits-list title{
     color: var(--title-text-color)
-    }
+  }
 .benefits-clarification{
     color: #757575;
 }
@@ -123,4 +121,11 @@ background: #2196F3;
 }
 .imagi-partfolio p{
     color: #757575;
+}
+.imagi-partfolio h3{
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 2.57px;
+    letter-spacing: 0.06em;
+    color: #212121;
 }
