--- a/CSS/nain.css
+++ b/CSS/nain.css
@@ -41,7 +41,7 @@ ul{
 }
 /*Navigations*/
 .navig_sait a{
-    color: var(--title-text-color)
+    color: var(--title-text-color);
 font-weight: 500;
 font-size: 14px;
 line-height: 1,14px;
@@ -69,6 +69,15 @@ letter-spacing: 0.02em;
 .name{
     background: #2F303A;
     color: var(--button-text-color)
+}
+.name_title{
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1,36px;
+    /* or 136% */
+    
+    text-align: center;
+    color: #FFFFFF;
 }
 .section{
     background: #FFFFFF;
