--- a/CSS/nain.css
+++ b/CSS/nain.css
@@ -19,13 +19,14 @@
 /**LOGO**/
 .logo{
     font-family: Raleway;
-font-style: normal;
-font-size: 26px;
-line-height: 1,19px;
+    font-style: normal;
+    font-weight:700;
+    font-size: 26px;
+    line-height: 1.19px;
+    /* identical to box height */
+    letter-spacing: 0.03em;
 }
-.adress{
-    color: #FFFFFF;
-}
+
 
 .Web_color{
     color: #2196F3;
@@ -170,8 +171,33 @@ color: #757575;
 .footer{
     background-color:  #2F303A; 
 }
+.logo-fot{
+font-family: Raleway;
+font-style: normal;
+font-weight: 700;
+font-size: 26px;
+line-height: 1.19px;
+/* identical to box height */
+letter-spacing: 0.03em;
+}
+.adress{
+ font-weight: 400;
+font-size: 14px;
+line-height: 1.71px;
+/* or 171% */
+letter-spacing: 0.03em;
+color: #FFFFFF;
+}
 .section-comand{
     background: #F5F4FA;
+}
+.contakts{
+     font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
 }
 /*адреса*/
 .Web_color3{
