--- a/CSS/nain.css
+++ b/CSS/nain.css
@@ -41,7 +41,6 @@ a{
 ul{
     list-style: none;
 }
-
 /*Navigations*/
 .navig_sait a{
     color: var(--title-text-color);
@@ -85,9 +84,8 @@ letter-spacing: 0.02em;
 .name_title{
     /*геометрия*/
 
-
     /*цвет*/
-       font-family: Roboto;
+ font-family: Roboto;
 font-style: normal;
 font-weight: 900;
 font-size: 44px;
@@ -117,6 +115,14 @@ display: flex;
 align-items: center;
 text-align: center;
 letter-spacing: 0.06em;
+/*кнопка параметры*/
+
+width: 200px;
+height: 50px;
+left: 700px;
+top: 430px;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
 }
 
 /*секция 2*/
