--- a/CSS/nain.css
+++ b/CSS/nain.css
@@ -291,14 +291,14 @@ line-height: 26px;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-    color: #212121;
+    color: var(--color-command-name)
 }
 .imagi-partfolio p {
         font-size: 16px;
     line-height: 1.88;
     /* identical to box height, or 187% */
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--color-command-post)
 }
 
 
